# webview_gtk_embed

./: .metadata  CHANGELOG.md  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
lib/: webview_gtk_embed.dart  webview_gtk_embed_method_channel.dart  webview_gtk_embed_platform_interface.dart
linux/: CMakeLists.txt  webview_gtk_embed_plugin.cc
linux/include/webview_gtk_embed/: webview_gtk_embed_plugin.h
test/: webview_gtk_embed_method_channel_test.dart  webview_gtk_embed_test.dart
